# fedibgs

./: .gitmodules  CLIP_SERVER.ps1  clip.yml  database.py  docker-compose.yml  init.sql  main.py  pyproject.toml  scrape.py  search.py  tasks.py
templates/: base.jinja  index.jinja
