[tool.poetry]
name = "fedibgs"
version = "0.1.0"
description = ""
authors = ["PrivateGER <privateger@privateger.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
clip-client = "^0.8.3"
requests = "^2.32.3"
"Mastodon.py" = "^1.8.1"
redis = "^5.0.7"
rq = "^1.16.2"
torch = {version = "^2.3.1+cu118", source = "pytorch_gpu"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch_gpu"}
clip-server = "^0.8.3"
numpy = "1.26.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
celery = "^5.4.0"
flower = "^2.0.1"
eventlet = "^0.36.1"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
