[tool.poetry]
name = "fedibgs"
version = "0.1.0"
description = ""
authors = ["PrivateGER <privateger@privateger.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
"Mastodon.py" = "^1.8.1"
redis = "^5.0.7"
numpy = "1.26.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
celery = "^5.4.0"
flower = "^2.0.1"
eventlet = "^0.36.1"
jinja2 = "^3.1.4"
